Fixed noise filtering